Ajout d'un bloc menu Nouvelles pour mobile + correction et ajout de marges + resize bloc Nouvelles + correction alignement texte

--- a/css/viveris.css
+++ b/css/viveris.css
@@ -47,7 +47,7 @@ h4 {
     padding:0 5px 10px 5px;
     background:#e0e0e0;
     border:2px solid #0079b2;
-    margin-top:10px;
+    margin:10px;
     border-radius:10px;
 }
 
